Fixed overflow

--- a/style.css
+++ b/style.css
@@ -115,8 +115,6 @@
     width: 1px;
     max-width: 1px;
     height: 100%;
-    margin-top: 75px;
-    margin-bottom: 75px;
 }
 
 /* Elements */
